--- a/templates/form.html
+++ b/templates/form.html
@@ -20,7 +20,7 @@
 	<body align=center>
 		<div class="row">
 			<div class="col-md-4"></div>
-			<div class="col-md-4"><legend><h1>Calculator by Anas</h1></legend></div>
+			<div class="col-md-4"><legend><h1>Calculator</h1></legend></div>
 			<div class="col-md-4"></div>
 		</div>
 			<br>
